tests/typing/good/testfile-as-1.rs


fn main() {

    let v = vec![0, 1];

    v[1i32 as usize];
}