tests/typing/bad/testfile-neg-usize.rs

fn main() {
    let x = 1;
    let v = vec![0, 1];
    let y1 = v[x];
    let y2 = -x;
    let z = y1 + y2;
}